@@ -53,6 +53,34 @@
             <artifactId>fontawesomefx</artifactId>
             <version>8.9</version>
         </dependency>
+        
+        <!-- Infobip SMS API -->
+        <dependency>
+            <groupId>com.infobip</groupId>
+            <artifactId>infobip-api-java-client</artifactId>
+            <version>6.1.0</version>
+        </dependency>
+
+        <!-- Google API Client Libraries -->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client-jetty</artifactId>
+            <version>1.34.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-calendar</artifactId>
+            <version>v3-rev20220715-2.0.0</version>
+        </dependency>
+
+
+
+
     </dependencies>
     <build>
         <plugins>
@@ -62,8 +90,31 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>controllers.Home</mainClass>
+                    <options>
+                        <option>--add-modules=ALL-MODULE-PATH</option>
+                    </options>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>controllers.Home</mainClass>
+                    <options>
+                        <option>--module-path</option>
+                        <option>${project.basedir}/lib</option>
+                        <option>--add-modules</option>
+                        <option>ALL-MODULE-PATH</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
+                    </options>
+                </configuration>
+            </plugin>
+            <!-- Add this more basic plugin to include the libs -->
+
+
+
         </plugins>
     </build>
     <!-- Repository for CalendarFX -->
